<resources>
    <string name="app_name">vsga_project3</string>
    <string name="username">Username</string>
    <string name="masukkan_username">Masukkan Username</string>
    <string name="password">Password</string>
    <string name="masukkan_sandi">Masukkan sandi</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logo_kominfo">Logo Kominfo</string>
    <string name="simpan">Simpan</string>
    <string name="masukkan_alamat_tinggal">Masukkan alamat tinggal</string>
    <string name="alamat_tinggal">Alamat Tinggal</string>
    <string name="masukkan_nama_sekolah">Masukkan nama sekolah</string>
    <string name="asal_sekolah">Asal Sekolah</string>
    <string name="masukkan_nama">Masukkan nama</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="masukkan_alamat_email">Masukkan alamat email</string>
    <string name="email">Email</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="halaman_logout">Halaman Logout</string>
</resources>