<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_usernameR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/username"/>

        <EditText
            android:id="@+id/et_usernameR"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="14sp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/masukkan_username"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/tv_passwordR"
            android:layout_width="match_parent"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/et_passwordR"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:textSize="14sp"
            android:hint="@string/masukkan_password"
            android:inputType="textPassword"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/tv_emailR"
            android:layout_width="match_parent"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/et_emailR"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:textSize="14sp"
            android:hint="@string/masukkan_alamat_email"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/tv_namaR"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/nama_lengkap" />

        <EditText
            android:id="@+id/et_namaR"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="14sp"
            android:ems="10"
            android:hint="@string/masukkan_nama"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />
        <TextView
            android:id="@+id/tv_asalSekolahR"
            android:layout_width="match_parent"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:text="@string/asal_sekolah" />

        <EditText
            android:id="@+id/et_asalSekolahR"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:textSize="14sp"
            android:hint="@string/masukkan_nama_sekolah"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />
        <TextView
            android:id="@+id/tv_alamatR"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:textSize="14sp"
            android:layout_height="wrap_content"
            android:text="@string/alamat_tinggal" />

        <EditText
            android:id="@+id/et_alamatR"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="14sp"
            android:ems="10"
            android:hint="@string/masukkan_alamat_tinggal"
            android:inputType="textMultiLine"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/btn_simpan"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:textSize="14sp"
            android:text="@string/simpan" />


     </LinearLayout>

</ScrollView>