<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:contentDescription="@string/logo_kominfo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:fitsSystemWindows="true"
        app:srcCompat="@drawable/logo_kominfo" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:textSize="14sp"
        android:text="@string/username" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:hint="@string/masukkan_username"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:hint="@string/masukkan_sandi"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/login" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/register" />


</LinearLayout>
